# calculator-language

./: CMakeLists.txt  Language Specifications  README.md
include/: c_vector.h  evaluator.h  lexer.h
src/: evaluator.c  lexer.c  main.c
